Add signup page and modify db

--- a/message_board/boardManager/templates/base.html
+++ b/message_board/boardManager/templates/base.html
@@ -1,5 +1,7 @@
 <a href="/login/">login</a> <br>
 <a href="/logout/">logout</a> <br>
+<a href="/signup/">sign up</a> <br>
+
 
 {% block content %}
 {% endblock %}
